--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </div>
       </div>
       <div class="view-more" style="margin-top: 3rem; padding-top: 2rem; border-top: 2px solid #e2e8f0;">
-        <a href="../html/alltools.html" class="view-more-link" style="font-size: 1.2rem; justify-content: center; display: flex;">⭐ Explore All 50+ Tools →</a>
+        <a href="../html/alltools.html" class="view-more-link" style="font-size: 1.2rem; justify-content: center; display: flex;">⭐ Explore All 20+ Tools →</a>
       </div>
     </section>
 
@@ -356,7 +356,7 @@
             <div style="width: 50px; height: 50px; background: linear-gradient(135deg, #38bdf8 0%, #0ea5e9 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center; font-size: 1.5rem; flex-shrink: 0;">🎯</div>
             <div style="text-align: left; flex: 1;">
               <div style="font-weight: 700; color: #0f172a; margin-bottom: 0.25rem;">Our Mission</div>
-              <div style="color: #64748b; font-size: 0.9rem;">Odisha students को quality education accessible बनाना</div>
+              <div style="color: #64748b; font-size: 0.9rem;">Odisha students को quality education and Regular using tools accessible बनाना</div>
             </div>
           </div>
           <div style="background: white; padding: 1.5rem; border-radius: 15px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06); display: flex; align-items: center; gap: 1rem;">
@@ -390,7 +390,7 @@
             <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%); border-radius: 15px; display: flex; align-items: center; justify-content: center; font-size: 2rem; flex-shrink: 0;">📱</div>
             <div style="flex: 1;">
               <div style="font-weight: 700; color: #0f172a; margin-bottom: 0.5rem; font-size: 1.1rem;">Call / WhatsApp</div>
-              <a href="tel:+911234567890" id="contact-phone" style="color: #22c55e; text-decoration: none; font-weight: 600;">+91 1234567890</a>
+              <a href="tel:+911234567890" id="contact-phone" style="color: #22c55e; text-decoration: none; font-weight: 600;">+91 8917694522</a>
             </div>
           </div>
         </div>
@@ -410,7 +410,7 @@
           <a href="#contact" class="footer-link">Contact</a>
         </div>
         <div class="copyright">
-          © 2024 Zeronvia • Made with ❤️ for Odisha Students • Always Free
+          © 2026 Zeronvia • Made with ❤️ for Odisha Students • Always Free
         </div>
       </div>
     </footer>
@@ -421,3 +421,4 @@
   <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b9a70c257f76e29',t:'MTc2NzY5NDM4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
+
