--- a/index.html
+++ b/index.html
@@ -383,14 +383,14 @@
             <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #38bdf8 0%, #0ea5e9 100%); border-radius: 15px; display: flex; align-items: center; justify-content: center; font-size: 2rem; flex-shrink: 0;">📧</div>
             <div style="flex: 1;">
               <div style="font-weight: 700; color: #0f172a; margin-bottom: 0.5rem; font-size: 1.1rem;">Email Us</div>
-              <a href="mailto:contact@zeronvia.com" id="contact-email" style="color: #0ea5e9; text-decoration: none; font-weight: 600;">contact@zeronvia.com</a>
+              <a href="mailto:contact@zeronvia.com" id="contact-email" style="color: #0ea5e9; text-decoration: none; font-weight: 600;">technicalaman@zeronvia.online</a>
             </div>
           </div>
           <div style="background: white; padding: 2rem; border-radius: 20px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08); display: flex; align-items: center; gap: 1.5rem;">
             <div style="width: 60px; height: 60px; background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%); border-radius: 15px; display: flex; align-items: center; justify-content: center; font-size: 2rem; flex-shrink: 0;">📱</div>
             <div style="flex: 1;">
               <div style="font-weight: 700; color: #0f172a; margin-bottom: 0.5rem; font-size: 1.1rem;">Call / WhatsApp</div>
-              <a href="tel:+911234567890" id="contact-phone" style="color: #22c55e; text-decoration: none; font-weight: 600;">+91 8917694522</a>
+              <a href="tel:+918917694522" id="contact-phone" style="color: #22c55e; text-decoration: none; font-weight: 600;">+91 8917694522</a>
             </div>
           </div>
         </div>
@@ -421,4 +421,5 @@
   <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b9a70c257f76e29',t:'MTc2NzY5NDM4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
+
 
