--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="category-icon">💰</div>
           <div class="category-title">Commerce Tools</div>
           <div class="tool-list">
-            <a href="https://calculator.zeronvia.com" target="_blank" style="text-decoration: none; color: inherit; display: block;">
+            <a href="Free-Online-Tools/Commerce Tools" target="_blank" style="text-decoration: none; color: inherit; display: block;">
               <div class="tool-item">
                 <div class="tool-emoji">🧮</div>
                 <div class="tool-text">
@@ -421,5 +421,6 @@
   <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b9a70c257f76e29',t:'MTc2NzY5NDM4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
+
 
 
