--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <div>Career guidance for Odisha students</div>
             </div>
           </div>
-          <a href="https://chse2.zeronvia.com" target="_blank" class="btn-primary" style="width: 100%; margin-top: 1rem; display: block; text-align: center; text-decoration: none;">📚 Open CHSE +2 Guide</a>
+          <a href="sk-main/index.html" target="_blank" class="btn-primary" style="width: 100%; margin-top: 1rem; display: block; text-align: center; text-decoration: none;">📚 Open CHSE +2 Guide</a>
         </div>
       </div>
     </section>
@@ -421,6 +421,7 @@
   <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9b9a70c257f76e29',t:'MTc2NzY5NDM4Mi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
 </html>
+
 
 
 
