Remove dark mode styles and update background color

--- a/sk-main/index.html
+++ b/sk-main/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="hi" class="h-full">
  <head>
-    <link rel="stylesheet" href="/styles/dark-mode.css">
-    <meta name="color-scheme" content="dark">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zeronvia Class  12th</title><!-- Canva Element SDK for customization -->
@@ -230,8 +228,8 @@
             margin: 0;
             padding: 0;
             font-family: 'Segoe UI', sans-serif;
-            /* Dark mode: use CSS variable */
-            background-color: var(--bg);
+            /* Light mode: fixed background */
+            background-color: #ffffff;
         }
 
         /* Sky Blue Sticky Header */
@@ -282,7 +280,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo" id="site-name">
-                📚 Zeronvia Class 12th
+                📚 Zeronvia 
             </div>
         </div>
     </header>
